src/validation/tests/snapshots/rusty__validation__tests__array_validation_test__parenthesized_struct_initializers.snap
---
source: src/validation/tests/array_validation_test.rs
expression: diagnostics
---
error[E043]: Struct initializers within arrays have to be wrapped by `()`
   ┌─ <internal>:10:56
   │
10 │                 foo_invalid_a : ARRAY[1..2] OF foo := [idx := 0, val := 0, idx := 1, val := 1];     // Both initializers missing parens
   │                                                        ^^^^^^^^ Struct initializers within arrays have to be wrapped by `()`

error[E043]: Struct initializers within arrays have to be wrapped by `()`
   ┌─ <internal>:10:66
   │
10 │                 foo_invalid_a : ARRAY[1..2] OF foo := [idx := 0, val := 0, idx := 1, val := 1];     // Both initializers missing parens
   │                                                                  ^^^^^^^^ Struct initializers within arrays have to be wrapped by `()`

error[E043]: Struct initializers within arrays have to be wrapped by `()`
   ┌─ <internal>:10:76
   │
10 │                 foo_invalid_a : ARRAY[1..2] OF foo := [idx := 0, val := 0, idx := 1, val := 1];     // Both initializers missing parens
   │                                                                            ^^^^^^^^ Struct initializers within arrays have to be wrapped by `()`

error[E043]: Struct initializers within arrays have to be wrapped by `()`
   ┌─ <internal>:10:86
   │
10 │                 foo_invalid_a : ARRAY[1..2] OF foo := [idx := 0, val := 0, idx := 1, val := 1];     // Both initializers missing parens
   │                                                                                      ^^^^^^^^ Struct initializers within arrays have to be wrapped by `()`

warning[E127]: Fewer initial values for array `foo_invalid_b` than expected. Expected 2, found 1.
   ┌─ <internal>:11:55
   │
11 │                 foo_invalid_b : ARRAY[1..2] OF foo := [idx := 0, val := 0, (idx := 1, val := 1)];   // First initializer missing parens
   │                                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Fewer initial values for array `foo_invalid_b` than expected. Expected 2, found 1.

error[E043]: Struct initializers within arrays have to be wrapped by `()`
   ┌─ <internal>:11:56
   │
11 │                 foo_invalid_b : ARRAY[1..2] OF foo := [idx := 0, val := 0, (idx := 1, val := 1)];   // First initializer missing parens
   │                                                        ^^^^^^^^ Struct initializers within arrays have to be wrapped by `()`

error[E043]: Struct initializers within arrays have to be wrapped by `()`
   ┌─ <internal>:11:66
   │
11 │                 foo_invalid_b : ARRAY[1..2] OF foo := [idx := 0, val := 0, (idx := 1, val := 1)];   // First initializer missing parens
   │                                                                  ^^^^^^^^ Struct initializers within arrays have to be wrapped by `()`

warning[E127]: Fewer initial values for array `foo_invalid_c` than expected. Expected 2, found 1.
   ┌─ <internal>:12:55
   │
12 │                 foo_invalid_c : ARRAY[1..2] OF foo := [(idx := 0, val := 0), idx := 1, val := 1];   // Second initializer missing parens
   │                                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Fewer initial values for array `foo_invalid_c` than expected. Expected 2, found 1.

error[E043]: Struct initializers within arrays have to be wrapped by `()`
   ┌─ <internal>:12:78
   │
12 │                 foo_invalid_c : ARRAY[1..2] OF foo := [(idx := 0, val := 0), idx := 1, val := 1];   // Second initializer missing parens
   │                                                                              ^^^^^^^^ Struct initializers within arrays have to be wrapped by `()`

error[E043]: Struct initializers within arrays have to be wrapped by `()`
   ┌─ <internal>:12:88
   │
12 │                 foo_invalid_c : ARRAY[1..2] OF foo := [(idx := 0, val := 0), idx := 1, val := 1];   // Second initializer missing parens
   │                                                                                        ^^^^^^^^ Struct initializers within arrays have to be wrapped by `()`

error[E043]: Struct initializers within arrays have to be wrapped by `()`
   ┌─ <internal>:13:55
   │
13 │                 foo_invalid_d : ARRAY[1..2] OF foo := [idx := 0];
   │                                                       ^^^^^^^^^^ Struct initializers within arrays have to be wrapped by `()`
